[workspace]
resolver = "2"
members = [
  "bevy_winit_gtk",
  "bevy_tao",
  "examples/*",
]

[workspace.package]
edition = "2021"
authors = ["Nicola Papale"]
license = "MIT OR Apache-2.0"

# [patch.crates-io]
# winit = { path = "../winit-gtk", version = "0.28.6" }
# wry = { path = "../wry", version = "0.32.0" }