[package]
name = "bevy_winit_gtk"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[features]
default = ["winit-gtk"]

[dependencies]
bevy = { version = "0.11.2", default-features = false }
approx = { version = "0.5", default-features = false }

raw-window-handle = "0.5"

accesskit_winit = { version = "0.14.4", default-features = false, optional = true }
winit = { version = "0.28.1", optional = true }

[dependencies.winit-gtk]
version = "0.28.1"
git = "https://github.com/wusyong/winit-gtk.git"
rev = "56203cb"
optional = true

# wry = { version = "0.32.0", default-features = false, features = ["winit"] }
