[package]
name = "wry_demo"
description = "The we can use WRY with bevy_winit_gtk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bevy_tao = { path = "../../bevy_tao" }
bevy = { version = "0.11.2", default-features = false, features = [
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "default_font",
] }
wry = { version = "0.32.0", default-features = false, features = ["winit"] }
rand = "0.8.5"


[package.metadata.release]
release = false
